--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
 
     <h1>Welcome to My Website!</h1>
 
-    <!-- Link to about.html -->
-    <p><a href="about.html">About Us</a></p>
-
-    <!-- Link to contact.html -->
-    <p><a href="contact.html">Contact Us</a></p>
+    
+    <p><a href="cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></p>
+    <p><a href="domain_dashboard.html">Contact Us</a></p>
 
 </body>
 </html>
