--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <p><a href="cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></p>
-    <p><a href="domain_dashboard.html">Contact Us</a></p>
+    <p><a href="domain_dashboard.html">Domain Dashboard</a></p>
 
 </body>
 </html>
