--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Welcome to My Website!</h1>
 
     
-    <p><a href="cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></p>
-    <p><a href="domain_dashboard.html">Domain Dashboard</a></p>
+    <p><a href="cherwell_incidents_responses/ccherwell_SR_incident_responses.html">Cherwell Incident Responses</a></p>
+    <p><a href="domain_dashboard/domain_dashboard.html">Domain Dashboard</a></p>
 
 </body>
 </html>
