--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Navigation Bar Example</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-brand">
+            <a href="index.html">My Website</a>
+        </div>
+        <ul class="navbar-links">
+            <li><a href="cherwell_incidents_responses/cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></li>
+            <li><a href="domain_dashboard.html">Domain Dashboard</a></li>
+            <li><a href="portfolio.html">TBD</a></li>
+            <li><a href="contact.html">TBD</a></li>
+        </ul>
+    </nav>
 
-    <h1>Welcome to My Website!</h1>
+    <!-- Page content goes here -->
 
-    
-    <p><a href="cherwell_incidents_responses/cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></p>
-    <p><a href="domain_dashboard/domain_dashboard.html">Domain Dashboard</a></p>
-
+    <script src="scripts.js"></script>
 </body>
 </html>
