--- a/index.html
+++ b/index.html
@@ -67,10 +67,8 @@ body {
             <a href="index.html">My Website</a>
         </div>
         <ul class="navbar-links">
-            <li><a href="cherwell_incidents_responses/cherwell_SR_incident_responses.html">Cherwell Incident Responses</a></li>
-            <li><a href="domain_dashboard.html">Domain Dashboard</a></li>
-            <li><a href="portfolio.html">TBD</a></li>
-            <li><a href="contact.html">TBD</a></li>
+            <li><a href="01/cherwell_response.html">Cherwell Incident Responses</a></li>
+            <li><a href="02/domain_dashboard.html">Domain Dashboard</a></li>
         </ul>
     </nav>
 
