--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
             <a href="index.html">My Website</a>
         </div>
         <ul class="navbar-links">
-            <li><a href="01/cherwell_response.html">Cherwell Incident Responses</a></li>
+            <li><a href="01/cherwell_responses.html">Cherwell Incident Responses</a></li>
             <li><a href="02/domain_dashboard.html">Domain Dashboard</a></li>
         </ul>
     </nav>
