--- a/navbar.html
+++ b/navbar.html
@@ -3,8 +3,8 @@
         <a href="index.html">My Website</a>
     </div>
     <ul class="navbar-links">
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
+        <li><a href="01/cherwell_responses.html">Cherwell Responses</a></li>
+        <li><a href="02/domain_dashboard.html">Domain Dashboard</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
