--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherwell Responses</title>
-	<link rel="icon" href="icon.png" type="image/png">
+	<link rel="icon" href="images/icon.png" type="image/png">
 	<link rel="stylesheet" href="styles.css">
-    <style>
-        
-    </style>
 </head>
 <body>
     
 	<h1 id="page-title">
-	<img src="NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+	<img src="images/NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
 	<br>
 	Cherwell Service Requests / Incident Responses
 	</h1>
