--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherwell Responses</title>
 	<link rel="icon" href="images/icon.png" type="image/png">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="nhwoodsaa.github.io/css/styles.css">
 </head>
 <body>
     
