--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherwell Responses</title>
-	<link rel="icon" href="images/icon.png" type="image/png">
-	<link rel="stylesheet" href="nhwoodsaa.github.io/css/styles.css">
+	<link rel="icon" href="../images/icon.png" type="image/png">
+	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
     
 	<h1 id="page-title">
-	<img src="images/NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+	<img src="../images/NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
 	<br>
 	Cherwell Service Requests / Incident Responses
 	</h1>
