--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    
+    <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
 	<h1 id="page-title">
 	<img src="../images/NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
 	<br>
@@ -257,5 +257,6 @@
             }, 2000);
         }
     </script>
+	<script src="../scripts.js"></script>
 </body>
 </html>
