--- a/navbar.html
+++ b/navbar.html
@@ -50,7 +50,7 @@
         <a href="index.html" class="brand-link">My Website</a>
     </div>
     <ul class="navbar-links">
-        <li><a href="01/cherwell_responses.html">Cherwell Responses</a></li>
-        <li><a href="02/domain_dashboard.html">Domain Dashboard</a></li>
+        <li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
+        <li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
     </ul>
 </nav>
