--- a/navbar.html
+++ b/navbar.html
@@ -47,7 +47,7 @@
 
 <nav class="navbar">
     <div class="navbar-brand">
-        <a href="index.html" class="brand-link">My Website</a>
+        <a href="https://nhwoodsaa.github.io/index.html" class="brand-link">My Website</a>
     </div>
     <ul class="navbar-links">
         <li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
