--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,12 @@
 <style>.navbar {
     background-color: #f8f9fa;
-    padding: 10px 20px;
+    padding: 10px 0;
     border-bottom: 1px solid #ddd;
+}
+
+.container {
+    max-width: 1200px; /* Adjust the max-width as needed */
+    margin: 0 auto; /* Center the navbar */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -43,14 +48,17 @@
 }
 
 
+
 </style>
 
 <nav class="navbar">
-    <div class="navbar-brand">
-        <a href="https://nhwoodsaa.github.io/index.html" class="brand-link">My Website</a>
-    </div>
-    <ul class="navbar-links">
-        <li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
-        <li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
-    </ul>
+	<div class="container">
+		<div class="navbar-brand">
+			<a href="https://nhwoodsaa.github.io/index.html" class="brand-link">My Website</a>
+		</div>
+		<ul class="navbar-links">
+			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
+			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
+		</ul>
+	</div>
 </nav>
