--- a/navbar.html
+++ b/navbar.html
@@ -1,52 +1,142 @@
-<style>.navbar {
-    background-color: #f8f9fa;
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
+<style>* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.container {
-    max-width: 1200px; /* Adjust the max-width as needed */
-    margin: 0 auto; /* Center the navbar */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+  background-color: #24252a;
 }
 
-.navbar-brand {
-    font-size: 1.5em;
-    color: #333;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Rounded font */
+.logo {
+  cursor: pointer;
+  order: 3;
+  margin-left: auto;
 }
 
-.navbar-links {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+nav {
+  order: 1;
 }
 
-.navbar-links li {
-    display: inline-block;
-    margin-left: 20px; /* Adjusted margin to separate links */
+.nav__links a,
+.cta,
+.overlay__content a {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: #edf0f1;
+  text-decoration: none;
 }
 
-.navbar-links li:first-child {
-    margin-left: 0; /* Remove margin for the first link */
+.nav__links {
+  list-style: none;
+  display: flex;
+  font-size: 16px;
 }
 
-.navbar-links li a {
-    color: #333;
-    text-decoration: none;
-    transition: color 0.3s ease;
+.nav__links li {
+  padding: 0px 20px;
 }
 
-.navbar-links li a:hover {
-    color: #007bff; /* Change color on hover */
+.nav__links li:nth-child(1) {
+  padding: 0 20px 0 0;
 }
 
-.brand-link {
-    font-weight: bold;
+.nav__links li a {
+  transition: all 0.3s ease 0s;
 }
 
+.nav__links li a:hover {
+  color: #0088a9;
+}
+
+.cta {
+  order: 2;
+  margin-left: 20px;
+  padding: 9px 25px;
+  background-color: rgba(0, 136, 169, 1);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.3s ease 0s;
+}
+
+.cta:hover {
+  background-color: rgba(0, 136, 169, 0.8);
+}
+
+/* Mobile Nav */
+
+.menu {
+  display: none;
+}
+
+.overlay {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  background-color: #24252a;
+  overflow-x: hidden;
+  transition: all 0.5s ease 0s;
+}
+
+.overlay--active {
+  width: 100%;
+}
+
+.overlay__content {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay a {
+  padding: 15px;
+  font-size: 36px;
+  display: block;
+  transition: all 0.3s ease 0s;
+}
+
+.overlay a:hover,
+.overlay a:focus {
+  color: #0088a9;
+}
+.overlay .close {
+  position: absolute;
+  top: 20px;
+  right: 45px;
+  font-size: 60px;
+  color: #edf0f1;
+}
+
+@media screen and (max-height: 450px) {
+  .overlay a {
+    font-size: 20px;
+  }
+  .overlay .close {
+    font-size: 40px;
+    top: 15px;
+    right: 35px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .nav__links,
+  .cta {
+    display: none;
+  }
+  .menu {
+    display: initial;
+  }
+}
 
 
 </style>
