--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div id="navbar-container"></div> <!-- Placeholder for the navbar -->
+    <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
         <p> 
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus orci ante, accumsan vel justo nec, facilisis tincidunt ante. Nulla in tempor felis. Mauris pharetra sapien viverra, faucibus nisi vitae, condimentum tellus. Morbi mollis augue ac enim varius, non vestibulum lectus placerat. Morbi rhoncus neque et condimentum accumsan. Vivamus rutrum lorem mauris, quis consequat ex commodo eu. Mauris mollis purus vitae dapibus fringilla. Cras ac nisi posuere, dictum ipsum ac, hendrerit dolor. Proin rhoncus erat luctus iaculis gravida. Suspendisse tellus odio, commodo quis ipsum eu, luctus tincidunt enim. Vivamus egestas eros id consequat molestie.
