--- a/navbar.html
+++ b/navbar.html
@@ -1,54 +1,4 @@
-<style>.navbar {
-    background-color: #f8f9fa;
-    padding: 10px 0;
-    border-bottom: 1px solid #ddd;
-}
-
-.container {
-    max-width: 1200px; /* Adjust the max-width as needed */
-    margin: 0 auto; /* Center the navbar */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.navbar-brand {
-    font-size: 1.5em;
-    color: #333;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* Rounded font */
-}
-
-.navbar-links {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-links li {
-    display: inline-block;
-    margin-left: 20px; /* Adjusted margin to separate links */
-}
-
-.navbar-links li:first-child {
-    margin-left: 0; /* Remove margin for the first link */
-}
-
-.navbar-links li a {
-    color: #333;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.navbar-links li a:hover {
-    color: #007bff; /* Change color on hover */
-}
-
-.brand-link {
-    font-weight: bold;
-}
-
-
-
+<style>
 </style>
 
 <nav class="navbar">
