test removal of html body in css

--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
-			<a href="https://nhwoodsaa.github.io/index.html" class="brand-link">My Website</a>
+			<a href="https://nhwoodsaa.github.io/index.html" class="brand-link">Home</a>
 		</div>
 		<ul class="navbar-links">
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
