--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,12 @@
+<style>
+nav#main-navbar {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+}
+
+</style>
+
 <nav class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
