--- a/navbar.html
+++ b/navbar.html
@@ -7,7 +7,7 @@ nav#main-navbar {
 
 </style>
 
-<nav class="navbar">
+<nav id="main-navbar" class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
 			<a href="https://nhwoodsaa.github.io/index.html" class="brand-link">Home</a>
