--- a/navbar.html
+++ b/navbar.html
@@ -3,6 +3,7 @@ nav#main-navbar {
     background-color: #333;
     color: #fff;
     padding: 20px 0;
+	display: block;
 }
 
 </style>
@@ -10,7 +11,7 @@ nav#main-navbar {
 <nav id="main-navbar" class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
-			<a href="https://nhwoodsaa.github.io/index.html" class="brand-link">Home</a>
+			<a href="https://nhwoodsaa.github.io/" class="brand-link">Home</a>
 		</div>
 		<ul class="navbar-links">
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
