edit body tag to main-content

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -25,6 +25,7 @@
 	</p>
 	<br>
 	<br>
+	<div id="main-content">
 	<div class="input-container" id="input-names">
 		<div id="input-names">
 			<label for="analyst-name" class="input-label">Analyst Name:</label>
@@ -145,7 +146,7 @@
     <div class="notification" id="notification">Text copied to clipboard &#10004;</div>
 	
 	<!-- End detail page-->
-
+	</div>
 <footer>
     <p style="font-size: 12px; color: #888;">Created by Aaron Woods - May 2024</p>
 </footer>
