--- a/navbar.html
+++ b/navbar.html
@@ -1,13 +1,3 @@
-<style>
-nav#main-navbar {
-    background-color: #333;
-    color: #fff;
-    padding: 20px 0;
-	display: block;
-}
-
-</style>
-
 <nav id="main-navbar" class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
@@ -17,5 +7,10 @@ nav#main-navbar {
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
 			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
 		</ul>
+		<div class="mobile-menu-toggle">
+			<span></span>
+			<span></span>
+			<span></span>
+		</div>
 	</div>
 </nav>
