--- a/navbar.html
+++ b/navbar.html
@@ -3,11 +3,11 @@
 		<div class="navbar-brand">
 			<a href="https://nhwoodsaa.github.io/" class="brand-link">Home</a>
 		</div>
-		<ul class="navbar-links">
+		<ul class="navbar-links" id="navbar-links">
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
 			<li><a href="https://nhwoodsaa.github.io/02/domain_dashboard.html">Domain Dashboard</a></li>
 		</ul>
-		<div class="mobile-menu-toggle">
+		<div class="mobile-menu-toggle" id="mobile-menu-toggle">
 			<span></span>
 			<span></span>
 			<span></span>
