--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav id="main-navbar" class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
-			<a href="https://nhwoodsaa.github.io/" class="brand-link"><img src="https://nhwoodsaa.github.io/images/NH-EMR-LOGO-RGB.png" alt="Home"></a>
+			<a href="https://nhwoodsaa.github.io/" class="brand-link"><img src="https://nhwoodsaa.github.io/images/NH-EMR-LOGO-RGB.png" alt="Home" width="100"></a>
 		</div>
 		<ul class="navbar-links" id="navbar-links">
 			<li><a href="https://nhwoodsaa.github.io/01/cherwell_responses.html">Cherwell Responses</a></li>
