add comment for script navbar

--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -107,7 +107,7 @@
         <input type="text" id="comment-input">
         <button onclick="updateStatus()">Update Status</button>
     </div>
-	<script src="../scripts.js"></script>
+	<script src="../scripts.js">/* Script to pull in nav-bar*/ </script> 
     <script>
         let statuses = {
             "PRDD7": { "status": "status-red", "comment": "" },
