--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Donec non nunc vel ipsum sodales porta. Fusce vel nisi ligula. Maecenas lacinia 
 
 Donec et libero in odio pulvinar elementum. Sed ullamcorper libero sit amet pretium rutrum. Maecenas maximus felis sed dolor iaculis malesuada. Pellentesque ac tortor eget urna iaculis imperdiet. In tempor eget metus vitae pharetra. Nam pulvinar sapien et sem pellentesque, at consequat lorem porta. Nam ipsum mauris, luctus sed erat et, consectetur bibendum arcu. Etiam venenatis neque a iaculis molestie. Proin sed felis pulvinar, accumsan felis vitae, congue leo. Nam imperdiet ex quis nisl blandit, sed tincidunt augue hendrerit. Proin quis neque accumsan, sodales dui a, molestie metus. Nullam et erat magna. Sed quis vehicula turpis. Sed sed pellentesque elit. In nec est a odio malesuada sodales. 
 </p>
-    <script src="scripts.js"></script>
+    <script src="scripts.js">/* Script to pull in nav-bar */</script>
 </body>
 </html>
 
