--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -150,7 +150,7 @@
 <footer>
     <p style="font-size: 12px; color: #888;">Created by Aaron Woods - May 2024</p>
 </footer>
-	<script src="../scripts.js"></script>
+	<script src="../scripts.js">/* Script to pull in nav-bar */</script>
     <script>
         // Function to retrieve the analyst name from local storage
         function getAnalystNameFromStorage() {
