async load the navbar

--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="css/navbar.css">
 <nav id="main-navbar" class="navbar">
 	<div class="container">
 		<div class="navbar-brand">
