--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -148,7 +148,7 @@
 	<!-- End detail page-->
 	</div>
 <footer>
-    <p style="font-size: 12px; color: #888;">Created by Aaron Woods - May 2024</p>
+    <p style="font-size: 12px; color: #888;">Created by AW - May 2024</p>
 </footer>
 	<script src="../scripts.js">/* Script to pull in nav-bar */</script>
     <script>
