logo change remove nh branding

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -13,7 +13,7 @@
 <body>
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
 	<h1 id="page-title">
-	<img src="../images/NH-EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+	<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
 	<br>
 	Cherwell Service Requests / Incident Responses
 	</h1>
