--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-	<link rel="icon" href="../images/medical-prescription.png" type="image/png">
+	<link rel="icon" href="../images/hosp_icon.png" type="image/png">
 	<link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
