--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherwell Responses</title>
-	<link rel="icon" href="../images/icon.png" type="image/png">
+	<link rel="icon" href="../images/laptop_icon.png" type="image/png">
 	<link rel="stylesheet" href="../css/navbar.css">
 	<link rel="stylesheet" href="styles.css">
 	<link rel="stylesheet" href="../css/styles.css">
