--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>EMR Analyst Helper</title>
 	<link rel="icon" href="../images/laptop_icon.png" type="image/png">
 	<link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="css/styles.css">
