--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domain Status</title>
-	<link rel="stylesheet" href="../css/navbar.css">
-    <style>
+  <title>Domain Dashboard</title>
+  <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
@@ -20,7 +17,7 @@
             padding: 10px;
             border: 1px solid #ddd;
         }
-        .status-light {
+        .status-circle {
             width: 30px;
             height: 30px;
             border-radius: 50%;
@@ -42,132 +39,49 @@
         .admin-panel input, .admin-panel select {
             margin: 10px;
         }
-    </style>
+  </style>
 </head>
 <body>
-    <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
-	<h1>Domain Status Dashboard</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>Domain</th>
-                <th>Status</th>
-                <th>Comments</th>
-            </tr>
-        </thead>
-        <tbody>
-		    <tr id="PRDD7">
-                <td>PRDD7</td>
-                <td><div class="status-light" id="light-PRDD7"></div></td>
-                <td><span id="comment-PRDD7"></span></td>
-            </tr>
-            <tr id="MCKD7">
-                <td>MCKD7</td>
-                <td><div class="status-light" id="light-MCKD7"></div></td>
-                <td><span id="comment-MCKD7"></span></td>
-            </tr>
-            <tr id="PRJD7">
-                <td>PRJD7</td>
-                <td><div class="status-light" id="light-PRJD7"></div></td>
-                <td><span id="comment-PRJD7"></span></td>
-            </tr>
-            <tr id="STGD7">
-                <td>STGD7</td>
-                <td><div class="status-light" id="light-STGD7"></div></td>
-                <td><span id="comment-STGD7"></span></td>
-            </tr>
-            <tr id="TRND7">
-                <td>TRND7</td>
-                <td><div class="status-light" id="light-TRND7"></div></td>
-                <td><span id="comment-TRND7"></span></td>
-            </tr>
-        </tbody>
+<div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
+
+
+  <div>
+    <h3>Domain Dashboard</h3>
+    <table id="domainDetailsTable" border="1">
+      <thead>
+        <tr>
+          <th>Domain</th>
+          <th>Status</th>
+          <th>Comment</th>
+          <th>Purpose</th>
+        </tr>
+      </thead>
+      <tbody id="domainDetails">
+        <!-- Domain details will be populated here by JavaScript -->
+      </tbody>
     </table>
-
-    <button onclick="promptAdmin()">Open Admin Panel</button>
-
-
-    <div class="admin-panel" id="admin-panel">
-        <h2>Admin Panel</h2>
-        <label for="domain-select">Select Domain:</label>
-        <select id="domain-select">
-            <option value="PRDD7">PRDD7</option>
-			<option value="MCKD7">MCKD7</option>
-            <option value="PRJD7">PRJD7</option>
-            <option value="STGD7">STGD7</option>
-            <option value="TRND7">TRND7</option>
-        </select>
-        <label for="status-select">Select Status:</label>
-        <select id="status-select">
-            <option value="status-red">Red</option>
-            <option value="status-yellow">Yellow</option>
-            <option value="status-green">Green</option>
-        </select>
-        <label for="comment-input">Comment:</label>
-        <input type="text" id="comment-input">
-        <button onclick="updateStatus()">Update Status</button>
-    </div>
-	<script src="../scripts.js">/* Script to pull in nav-bar*/ </script> 
-    <script>
-        let statuses = {
-            "PRDD7": { "status": "status-red", "comment": "" },
-			"MCKD7": { "status": "status-red", "comment": "" },
-            "PRJD7": { "status": "status-red", "comment": "" },
-            "STGD7": { "status": "status-red", "comment": "" },
-            "TRND7": { "status": "status-red", "comment": "" }
-        };
-
-
-
-        // Function to update the status of a domain
-        function updateStatus() {
-            const domain = document.getElementById('domain-select').value;
-            const status = document.getElementById('status-select').value;
-            const comment = document.getElementById('comment-input').value;
-            const light = document.getElementById(`light-${domain}`);
-            const commentField = document.getElementById(`comment-${domain}`);
-
-            light.className = `status-light ${status}`;
-            commentField.textContent = comment;
-
-            statuses[domain] = { "status": status, "comment": comment };
-        }
-
-
-
-        // Function to update the lights and comments based on the statuses
-        function updateLights() {
-            for (const domain in statuses) {
-                const status = statuses[domain].status;
-                const comment = statuses[domain].comment;
-                const light = document.getElementById(`light-${domain}`);
-                const commentField = document.getElementById(`comment-${domain}`);
-                
-                light.className = `status-light ${status}`;
-                commentField.textContent = comment;
-            }
-        }
-		
-		// ------ Admin workflows IMPROVEMENTS TBD ------
-		
-		
-		// Prompt for admin access
-        function promptAdmin() {
-            const adminPassword = "admin123";
-            const userPassword = prompt("Enter admin password to access admin panel:");
-            if (userPassword === adminPassword) {
-                showAdminPanel();
-            } else {
-                alert("Access Denied: You are not an admin.");
-            }
-        }
-        // Function to toggle admin panel visibility
-        function showAdminPanel() {
-            const adminPanel = document.getElementById('admin-panel');
-            adminPanel.style.display = 'block';
-        }
-        // Load statuses when the page loads
-        window.onload = updateLights;
-    </script>
+  </div>
+<button onclick="promptAdmin()">Open Admin Panel</button>
+	<div class="admin-panel" id="admin-panel">
+	        <h2>Admin Panel</h2>
+  <form id="dataForm">
+    <select id="domainSelect">
+      <!-- Options will be populated by JavaScript -->
+    </select>
+    <select id="statusSelect">
+      <option value="green">Green</option>
+      <option value="yellow">Yellow</option>
+	  <option value="red">Red</option>
+    </select>
+    <input type="text" id="commentInput" placeholder="Enter comment" required />
+    <input type="text" id="purposeInput" placeholder="Enter purpose" required />
+    <button type="submit">Submit</button>
+  </form>
+	</div>
+  <!-- Place your script at the end of the body -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-database.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
