--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Domain Dashboard</title>
+  <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="domains.css">
 </head>
