--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -27,7 +27,8 @@
       </tbody>
     </table>
   </div>
-<button onclick="promptAdmin()" class="back-button">Open Admin Panel</button>
+  <br><br><br>
+<button class="admin-button" onclick="promptAdmin()" >Open Admin Panel</button>
 	<div class="admin-panel" id="admin-panel">
 	        <h2>Admin Panel</h2>
   <form id="dataForm">
