--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -42,7 +42,7 @@
     </select>
     <input type="text" id="commentInput" placeholder="Enter comment" required />
     <input type="text" id="purposeInput" placeholder="Enter purpose" required />
-    <button type="submit">Submit</button>
+    <button class="admin-button" type="submit">Submit</button>
   </form>
 	</div>
   <!-- Place your script at the end of the body -->
