edit admin panel boxes

--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -40,8 +40,8 @@
       <option value="yellow">Yellow</option>
 	  <option value="red">Red</option>
     </select>
-    <input type="text" id="commentInput" placeholder="Enter comment" required />
-    <input type="text" id="purposeInput" placeholder="Enter purpose" required />
+    <input type="text" id="commentInput" height="400" width="400" placeholder="Enter comment" required />
+    <input type="text" id="purposeInput" height="400" width="400" placeholder="Enter purpose" required />
     <button class="admin-button" type="submit">Submit</button>
   </form>
 	</div>
