--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -31,17 +31,21 @@
 <button class="admin-button" onclick="promptAdmin()" >Open Admin Panel</button>
 	<div class="admin-panel" id="admin-panel">
 	        <h2>Admin Panel</h2>
+			
   <form id="dataForm">
+  <div class="input-container">
     <select id="domainSelect">
       <!-- Options will be populated by JavaScript -->
     </select>
+	
     <select id="statusSelect">
       <option value="green">Green</option>
       <option value="yellow">Yellow</option>
 	  <option value="red">Red</option>
     </select>
-    <input type="text" id="commentInput" height="400" width="400" placeholder="Enter comment" required />
-    <input type="text" id="purposeInput" height="400" width="400" placeholder="Enter purpose" required />
+	</div>
+    <textarea  type="text" id="commentInput" placeholder="Enter comment" required ></textarea>
+    <textarea  type="text" id="purposeInput" placeholder="Enter purpose" required ></textarea >
     <button class="admin-button" type="submit">Submit</button>
   </form>
 	</div>
