--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -57,8 +57,8 @@
 		<label for="outageToInput">Outage To:</label>
 		<input type="text" id="outageToInput" name="outageTo">
 	</div>
-	<label style="display: none; for="iPMconnectionInput">iPM Connection</label>
-	<input style="display: none; type="text" id="iPMconnectionInput" name="iPMconnection">
+	<label style="display: none;" for="iPMconnectionInput">iPM Connection</label>
+	<input style="display: none;" type="text" id="iPMconnectionInput" name="iPMconnection">
 
     <button class="admin-button" type="submit">Submit</button>
   </form>
