--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -12,9 +12,8 @@
 </head>
 <body>
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
-	<h1 id="page-title">
 	<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
-	<br>
+	<h1 id="page-title">
 	Cherwell Service Requests / Incident Responses
 	</h1>
 	<p id="page-description" class="section-paragraph">
@@ -23,8 +22,7 @@
 	<br>
 	<b>NOTE: Some responses will have placeholder text which needs to be overwritten.</b>
 	</p>
-	<br>
-	<br>
+
 	<div id="main-content">
 	<div class="input-container" id="input-names">
 		<div id="input-names">
@@ -35,7 +33,9 @@
 		</div>
 	</div>
 	<br>
+
     <div id="grid-container">
+	<div class="separator"></div>
 		<h2>All Solutions Responses</h2>
 		<div class="grid-container" id="grid-container-all-solutions">
 			<div class="tile" onclick="showDetail(1001)">Close a Service Request due to insufficient approval</div>
