move emr-logo css class to main

--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -12,6 +12,8 @@
 
 
   <div>
+  <img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+	
     <h3>Domain Dashboard</h3>
     <table id="domainDetailsTable" border="1">
       <thead>
