--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
-	<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+	<img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
 	<h1 id="page-title">
 	Cherwell Service Requests / Incident Responses
 	</h1>
