--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -12,7 +12,7 @@
 
 
   <div>
-  <img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="Northern Health Logo">
+  <img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
 	
     <h3>Domain Dashboard</h3>
     <table id="domainDetailsTable" border="1">
