--- a/index.html
+++ b/index.html
@@ -5,24 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EMR Analyst Helper</title>
-	<link rel="icon" href="../images/laptop_icon.png" type="image/png">
+	<link rel="icon" href="images/laptop_icon.png" type="image/png">
 	<link rel="stylesheet" href="../css/navbar.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<img src="images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
     <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
         <p> 
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus orci ante, accumsan vel justo nec, facilisis tincidunt ante. Nulla in tempor felis. Mauris pharetra sapien viverra, faucibus nisi vitae, condimentum tellus. Morbi mollis augue ac enim varius, non vestibulum lectus placerat. Morbi rhoncus neque et condimentum accumsan. Vivamus rutrum lorem mauris, quis consequat ex commodo eu. Mauris mollis purus vitae dapibus fringilla. Cras ac nisi posuere, dictum ipsum ac, hendrerit dolor. Proin rhoncus erat luctus iaculis gravida. Suspendisse tellus odio, commodo quis ipsum eu, luctus tincidunt enim. Vivamus egestas eros id consequat molestie.
-
-Vestibulum a nulla ac ligula facilisis tincidunt. Aenean mauris augue, vulputate ut fermentum sed, porta id magna. Etiam malesuada vitae massa ut semper. Vivamus sit amet egestas turpis. Praesent tempor elit vitae libero viverra, eget pharetra magna commodo. Mauris et sapien diam. Quisque facilisis purus enim, non fringilla turpis porta ac. Nulla consequat sem quis elit pulvinar, at venenatis lacus iaculis. Pellentesque vel luctus nisl. Ut sed ligula ac metus lobortis dapibus.
-
-Maecenas auctor lobortis nisl, a interdum enim. In hac habitasse platea dictumst. Nulla cursus lectus lectus, at auctor ex pulvinar et. Aenean dictum, sem vitae egestas porta, nunc diam tristique ex, ac tempor libero libero ut lectus. Integer sit amet faucibus libero, ut mattis eros. Duis eu sollicitudin odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Morbi porta quis tortor in egestas. Curabitur vel ligula quis nibh lacinia finibus non at lorem. Donec tincidunt cursus sapien, non vestibulum leo fringilla tempus. Maecenas laoreet turpis in scelerisque efficitur. In placerat dolor tortor, ut dictum sem egestas in. Cras sit amet augue vel lectus varius pellentesque. Aliquam ornare ante auctor finibus feugiat. Morbi nec tempor arcu, et scelerisque mi.
-
-Donec non nunc vel ipsum sodales porta. Fusce vel nisi ligula. Maecenas lacinia tristique luctus. Curabitur gravida ligula in augue ullamcorper elementum. Maecenas tempus diam sed massa elementum sagittis. Fusce lectus nulla, lacinia sodales arcu ac, congue placerat felis. Sed eleifend fringilla lectus maximus aliquet. Nullam ac nulla eros. Nulla sit amet consectetur metus, nec imperdiet metus. Nam quis pellentesque velit, a commodo ex. Phasellus bibendum vel neque vel auctor. Suspendisse scelerisque facilisis libero id scelerisque. Phasellus volutpat aliquam porttitor. Phasellus eu rhoncus dui. Phasellus sem lectus, bibendum eu tellus sit amet, hendrerit sagittis metus. Sed non est in nibh volutpat sollicitudin.
-
-Donec et libero in odio pulvinar elementum. Sed ullamcorper libero sit amet pretium rutrum. Maecenas maximus felis sed dolor iaculis malesuada. Pellentesque ac tortor eget urna iaculis imperdiet. In tempor eget metus vitae pharetra. Nam pulvinar sapien et sem pellentesque, at consequat lorem porta. Nam ipsum mauris, luctus sed erat et, consectetur bibendum arcu. Etiam venenatis neque a iaculis molestie. Proin sed felis pulvinar, accumsan felis vitae, congue leo. Nam imperdiet ex quis nisl blandit, sed tincidunt augue hendrerit. Proin quis neque accumsan, sodales dui a, molestie metus. Nullam et erat magna. Sed quis vehicula turpis. Sed sed pellentesque elit. In nec est a odio malesuada sodales. 
-</p>
+<br><br>
+Welcome to the EMR Analyst Helper website! This is work in progress, if you have any suggestions please reach out! <br><br>
+Please use the navigation bar at the top of the website to move around.
+<br><br>
+		</p>
+		
+		<img class="emr-logo" src="images/emr_meme_MyHumerusLife.jpeg">
+		
     <script src="scripts.js">/* Script to pull in nav-bar */</script>
 </body>
 </html>
