--- a/02/domain_dashboard.html
+++ b/02/domain_dashboard.html
@@ -11,10 +11,9 @@
 <div id="navbar-container"></div> <!--Placeholder Nav Bar, replaced by JS-->
 
 
-  <div>
+  <div style="text-align: center;">
   <img src="../images/EMR-LOGO-RGB.png" class="emr-logo" alt="EMR Logo">
-	
-    <h3>Domain Dashboard</h3>
+	<h3>Domain Dashboard</h3>
     <table id="domainDetailsTable" border="1">
       <thead>
         <tr>
@@ -33,7 +32,10 @@
     </table>
   </div>
   <br><br><br>
+
+  <div style="text-align: center;">
 <button class="admin-button" onclick="promptAdmin()" >Open Admin Panel</button>
+</div>
 	<div class="admin-panel" id="admin-panel">
 	        <h2>Admin Panel</h2>
 			
