add new tile core

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -54,6 +54,7 @@
 			<div class="tile2" onclick="showDetail(2004)">Failure with the Mapped Account</div>
 			<div class="tile2" onclick="showDetail(2005)">Outpatient clinic code change/New clinic, not showing patients in Home</div>
 			<div class="tile2" onclick="showDetail(2006)">User Provisioning Request Denied (Seek Manager Approval)</div>
+			<div class="tile2" onclick="showDetail(2007)">Statistical discharge incorrectly</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Care Delivery Responses</h2>
