myexperience tile added core

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -55,6 +55,7 @@
 			<div class="tile2" onclick="showDetail(2005)">Outpatient clinic code change/New clinic, not showing patients in Home</div>
 			<div class="tile2" onclick="showDetail(2006)">User Provisioning Request Denied (Seek Manager Approval)</div>
 			<div class="tile2" onclick="showDetail(2007)">Statistical discharge incorrectly</div>
+			<div class="tile2" onclick="showDetail(2007)">Doesn't know how to use MyExperience</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Care Delivery Responses</h2>
