--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -43,7 +43,7 @@
 			<div class="tile" onclick="showDetail(1003)">Close a Service Request post CAB denied (Technical Limitation)</div>
 			<div class="tile" onclick="showDetail(1004)">Close an Incident and move to Problem ticket</div>
 			<div class="tile" onclick="showDetail(1005)">Generic Incidents Resolved</div>
-			<div class="tile" onclick="showDetail(1006)">Placeholder</div>
+			<div class="tile" onclick="showDetail(1006)">Failure to respond within timeframe</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Core Responses</h2>
