--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -56,6 +56,7 @@
 			<div class="tile2" onclick="showDetail(2006)">User Provisioning Request Denied (Seek Manager Approval)</div>
 			<div class="tile2" onclick="showDetail(2007)">Statistical discharge incorrectly</div>
 			<div class="tile2" onclick="showDetail(2008)">Doesn't know how to use MyExperience</div>
+			<div class="tile2" onclick="showDetail(2009)">Statistical Admission + Preadmit did not merge</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Care Delivery Responses</h2>
