removed extra placeholders

--- a/01/cherwell_responses.html
+++ b/01/cherwell_responses.html
@@ -62,70 +62,37 @@
 		<h2>Care Delivery Responses</h2>
 		<div class="grid-container" id="grid-container-care-delivery">
 			<div class="tile3" onclick="showDetail(3001)">Placeholder</div>
-			<div class="tile3" onclick="showDetail(3002)">Placeholder</div>
-			<div class="tile3" onclick="showDetail(3003)">Placeholder</div>
-			<div class="tile3" onclick="showDetail(3004)">Placeholder</div>
-			<div class="tile3" onclick="showDetail(3005)">Placeholder</div>
-			<div class="tile3" onclick="showDetail(3006)">Placeholder</div>
 		</div>
 		<div class="separator"></div>
 		<h2>FirstNet Responses</h2>
 		<div class="grid-container" id="grid-container-firstNet">
 			<div class="tile4" onclick="showDetail(4001)">Placeholder</div>
-			<div class="tile4" onclick="showDetail(4002)">Placeholder</div>
-			<div class="tile4" onclick="showDetail(4003)">Placeholder</div>
-			<div class="tile4" onclick="showDetail(4004)">Placeholder</div>
-			<div class="tile4" onclick="showDetail(4005)">Placeholder</div>
-			<div class="tile4" onclick="showDetail(4006)">Placeholder</div>
 		</div>
 		<div class="separator"></div>
 		<h2>SurgiNet Responses</h2>
 		<div class="grid-container" id="grid-container-surgiNet">
 			<div class="tile5" onclick="showDetail(5001)">Placeholder</div>
-			<div class="tile5" onclick="showDetail(5002)">Placeholder</div>
-			<div class="tile5" onclick="showDetail(5003)">Placeholder</div>
-			<div class="tile5" onclick="showDetail(5004)">Placeholder</div>
-			<div class="tile5" onclick="showDetail(5005)">Placeholder</div>
-			<div class="tile5" onclick="showDetail(5006)">Placeholder</div>		</div>
+		</div>
 		<div class="separator"></div>
 		<h2>Maternity Responses</h2>
 		<div class="grid-container" id="grid-container-maternity">
 			<div class="tile6" onclick="showDetail(6001)">Placeholder</div>
-			<div class="tile6" onclick="showDetail(6002)">Placeholder</div>
-			<div class="tile6" onclick="showDetail(6003)">Placeholder</div>
-			<div class="tile6" onclick="showDetail(6004)">Placeholder</div>
-			<div class="tile6" onclick="showDetail(6005)">Placeholder</div>
-			<div class="tile6" onclick="showDetail(6006)">Placeholder</div>		</div>	
+		</div>	
 		<div class="separator"></div>			
 		<h2>Orders & Results Responses</h2>
 
 		<div class="grid-container" id="grid-container-orders-and-results">
 			<div class="tile7" onclick="showDetail(7001)">Placeholder</div>
-			<div class="tile7" onclick="showDetail(7002)">Placeholder</div>
-			<div class="tile7" onclick="showDetail(7003)">Placeholder</div>
-			<div class="tile7" onclick="showDetail(7004)">Placeholder</div>
-			<div class="tile7" onclick="showDetail(7005)">Placeholder</div>
-			<div class="tile7" onclick="showDetail(7006)">Placeholder</div>
 		</div>
 		<div class="separator"></div>
 		<h2>Devices Responses</h2>
 		<div class="grid-container" id="grid-container-devices">
 			<div class="tile8" onclick="showDetail(8001)">Placeholder</div>
-			<div class="tile8" onclick="showDetail(8002)">Placeholder</div>
-			<div class="tile8" onclick="showDetail(8003)">Placeholder</div>
-			<div class="tile8" onclick="showDetail(8004)">Placeholder</div>
-			<div class="tile8" onclick="showDetail(8005)">Placeholder</div>
-			<div class="tile8" onclick="showDetail(8006)">Placeholder</div>
 		</div>	
 		<div class="separator"></div>
 		<h2>Medications Responses</h2>
 		<div class="grid-container" id="grid-container-devices">
 			<div class="tile9" onclick="showDetail(8001)">Placeholder</div>
-			<div class="tile9" onclick="showDetail(8002)">Placeholder</div>
-			<div class="tile9" onclick="showDetail(8003)">Placeholder</div>
-			<div class="tile9" onclick="showDetail(8004)">Placeholder</div>
-			<div class="tile9" onclick="showDetail(8005)">Placeholder</div>
-			<div class="tile9" onclick="showDetail(8006)">Placeholder</div>
 		</div>	
 	<div class="separator"></div>
 	<div class="bottom-div">
