adding margin to bottom of imgs

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
             max-width: 1200px;
 			margin: 0 auto;
 			position: relative;
+			
         }
         .grid-item {
             text-align: center;
+			
         }
         .grid-item img {
             max-width: 100%;
@@ -28,6 +30,7 @@
 		.link-image {
 			width: 150px;
 			height: 150px;
+			margin-bottom: 10px;
 		}
     </style>
 </head>
